--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         #admin-panel { display: none; background: #111; padding: 20px; border-radius: 20px; border: 1px solid var(--gold); margin-bottom: 25px; }
         .input-box, .select-box, .text-area { width: 100%; padding: 12px; margin-bottom: 10px; background: #000; border: 1px solid #333; color: white; border-radius: 8px; font-family: inherit; }
-        .text-area { height: 120px; resize: none; font-size: 12px; border: 1px solid #444; }
+        .text-area { height: 120px; resize: none; font-size: 12px; }
 
         .channels-container { display: grid; grid-template-columns: repeat(5, 1fr); gap: 5px; margin-bottom: 25px; padding: 10px 0; }
         .channel-item { text-align: center; opacity: 0.5; transition: 0.3s; cursor: pointer; }
@@ -38,52 +38,52 @@
         .active .channel-logo { border-color: var(--gold); }
         .channel-name { font-size: 7px; color: #aaa; font-weight: 800; text-transform: uppercase; }
 
-        .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; border: 1px solid #222; overflow: hidden; }
-        .cover-art { width: 100%; height: 210px; background-size: cover; background-position: center; position: relative; background-color: #000; }
-        .cover-overlay { position: absolute; inset: 0; background: rgba(0,0,0,0.3); display: flex; align-items: center; justify-content: center; }
+        .episode-card { background: var(--card); border-radius: 24px; margin-bottom: 35px; border: 1px solid #1a1a1a; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        .cover-art { width: 100%; height: 220px; background-size: cover; background-position: center; position: relative; }
+        .cover-overlay { position: absolute; inset: 0; background: rgba(0,0,0,0.2); display: flex; align-items: center; justify-content: center; }
         .btn-play-card { background: var(--gold); border: none; width: 65px; height: 65px; border-radius: 50%; cursor: pointer; font-size: 26px; }
 
-        .episode-info { padding: 15px; }
-        .program-tag { color: var(--gold); font-size: 10px; font-weight: 800; text-transform: uppercase; }
-        .episode-title { margin: 5px 0; font-size: 18px; font-weight: 800; color: #fff; letter-spacing: -0.5px; }
+        .episode-info { padding: 20px; }
+        .program-tag { color: var(--gold); font-size: 10px; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; }
+        .episode-title { margin: 8px 0; font-size: 20px; font-weight: 800; color: #fff; letter-spacing: -0.5px; }
         
-        /* --- AQUÍ ESTÁ EL NUEVO ESTILO DEL SETLIST --- */
+        /* --- DISEÑO ORDENADO DEL SETLIST --- */
         .btn-ver-playlist { 
-            background: #1a1a1a; border: 1px solid #333; color: var(--gold); 
-            padding: 10px; border-radius: 8px; font-size: 11px; font-weight: 800; 
+            background: #111; border: 1px solid #222; color: #888; 
+            padding: 12px; border-radius: 12px; font-size: 11px; font-weight: 800; 
             cursor: pointer; margin-top: 15px; width: 100%; text-transform: uppercase;
-            letter-spacing: 1px; transition: 0.3s;
+            letter-spacing: 1px; transition: 0.3s; display: flex; align-items: center; justify-content: center; gap: 8px;
         }
-        .btn-ver-playlist:hover { background: #222; border-color: var(--gold); }
+        .btn-ver-playlist:hover { border-color: var(--gold); color: var(--gold); }
 
         .playlist-box { 
             display: none; 
             margin-top: 15px; 
-            padding: 18px; 
-            background: #0a0a0a; 
-            border-radius: 12px; 
-            border-left: 3px solid var(--gold); 
-            font-size: 13px; 
-            color: #ccc; 
-            line-height: 1.8; 
-            font-family: 'Courier New', Courier, monospace; 
-            box-shadow: inset 0 0 15px rgba(0,0,0,0.8);
-            max-height: 250px;
+            padding: 20px; 
+            background: #080808; 
+            border-radius: 15px; 
+            border: 1px solid #1a1a1a;
+            font-size: 14px; 
+            color: #bbb; 
+            line-height: 2; /* Más espacio entre líneas */
+            white-space: pre-wrap; 
+            max-height: 300px;
             overflow-y: auto;
+            box-shadow: inset 0 0 20px rgba(0,0,0,1);
         }
-        /* --- FIN DEL NUEVO ESTILO --- */
 
-        .dj-actions { display: flex; gap: 10px; margin-top: 18px; border-top: 1px solid #222; padding-top: 15px; }
-        .btn-dj-edit { background: var(--gold); color: black; flex: 1; border: none; padding: 10px; border-radius: 8px; font-size: 10px; font-weight: 800; cursor: pointer; }
-        .btn-dj-del { background: none; border: 1px solid #ff4444; color: #ff4444; flex: 1; padding: 10px; border-radius: 8px; font-size: 10px; font-weight: 800; cursor: pointer; }
+        /* --- BOTONES DJ --- */
+        .dj-actions { display: flex; gap: 10px; margin-top: 20px; border-top: 1px solid #222; padding-top: 20px; }
+        .btn-dj-edit { background: var(--gold); color: black; flex: 1; border: none; padding: 12px; border-radius: 10px; font-size: 10px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
+        .btn-dj-del { background: none; border: 1px solid #333; color: #666; flex: 1; padding: 12px; border-radius: 10px; font-size: 10px; font-weight: 800; cursor: pointer; }
 
-        #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
-        .p-vinyl { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
+        #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; box-shadow: 0 -10px 30px rgba(0,0,0,0.8); }
+        .p-vinyl { width: 52px; height: 52px; border-radius: 50%; border: 2px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
         .playing .p-vinyl { animation-play-state: running; }
         @keyframes rotateVinyl { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
         
-        .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 12px; margin-top: 10px; gap: 6px; }
-        .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 10px 2px; border-radius: 8px; font-size: 9px; font-weight: 800; cursor: pointer; }
+        .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 15px; margin-top: 12px; gap: 8px; }
+        .btn-tool { flex: 1; background: #111; border: 1px solid #222; color: #fff; padding: 12px 5px; border-radius: 10px; font-size: 9px; font-weight: 800; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -99,28 +99,28 @@
 
 <div id="app-content" style="display:none;">
     <header>
-        <div style="display:flex; align-items:center; gap:10px;">
+        <div style="display:flex; align-items:center; gap:12px;">
             <img src="logo.png" class="header-logo" id="admin-trigger">
             <div class="brand-title">Jazztabueno<br>Productions</div>
         </div>
-        <button onclick="window.salirTotal()" style="background:none; border:1px solid var(--gold); color:var(--gold); padding:5px 10px; border-radius:5px; font-size:9px; font-weight:800; cursor:pointer;">SALIR</button>
+        <button onclick="window.salirTotal()" style="background:none; border:1px solid #333; color:#666; padding:6px 12px; border-radius:8px; font-size:9px; font-weight:800; cursor:pointer;">SALIR</button>
     </header>
 
     <div class="container">
         <div id="admin-panel">
-            <h4 id="admin-label" style="color:var(--gold); text-align:center; font-size:12px; margin-bottom:15px;">CABINA DE CONTROL</h4>
+            <h4 id="admin-label" style="color:var(--gold); text-align:center; font-size:12px; margin-bottom:15px; text-transform:uppercase; letter-spacing:2px;">Panel DJ</h4>
             <input type="hidden" id="edit-id">
-            <input type="text" id="t-titulo" class="input-box" placeholder="Título del Episodio">
+            <input type="text" id="t-titulo" class="input-box" placeholder="Título del Programa">
             <select id="t-programa" class="select-box">
                 <option value="JAZZTABUENO">JAZZTABUENO</option>
                 <option value="STUDIO">STUDIO 79</option>
                 <option value="SALSA">SALSA BRAVA</option>
                 <option value="OLD">OLD SCHOOL</option>
             </select>
-            <input type="text" id="t-url" class="input-box" placeholder="URL MP3">
-            <input type="text" id="t-img" class="input-box" placeholder="URL Imagen">
-            <textarea id="t-playlist" class="text-area" placeholder="Ej: Miles Davis - So What"></textarea>
-            <button id="btn-save" class="btn-gold-tico" style="padding:12px !important;">📻 GUARDAR PROGRAMA</button>
+            <input type="text" id="t-url" class="input-box" placeholder="URL MP3 (Dropbox/Drive)">
+            <input type="text" id="t-img" class="input-box" placeholder="URL Portada (Postimages)">
+            <textarea id="t-playlist" class="text-area" placeholder="Escribe aquí los ARTISTAS y CANCIONES (puedes usar guiones o números)"></textarea>
+            <button id="btn-save" class="btn-gold-tico" style="padding:15px !important; font-size:12px !important;">💾 GUARDAR PROGRAMA</button>
         </div>
 
         <div class="channels-container">
@@ -136,20 +136,20 @@
 
 <div id="global-player">
     <audio id="main-media" crossorigin="anonymous"></audio>
-    <div style="display:flex; align-items:center; gap:12px; margin-bottom:12px;">
+    <div style="display:flex; align-items:center; gap:15px; margin-bottom:12px;">
         <div id="p-vinyl" class="p-vinyl" style="background-image: url('logo.png');"></div>
         <div style="flex:1; overflow:hidden;">
-            <h4 id="p-title" style="margin:0; font-size:13px; color:#fff; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">...</h4>
-            <div id="p-time" style="font-size:10px; color:var(--gold); font-weight:900;">00:00 / 00:00</div>
+            <h4 id="p-title" style="margin:0; font-size:14px; color:#fff; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; font-weight:800;">...</h4>
+            <div id="p-time" style="font-size:11px; color:var(--gold); font-weight:900; margin-top:2px;">00:00 / 00:00</div>
         </div>
-        <button onclick="window.togglePlay()" id="p-play-btn" style="background:none; border:none; color:var(--gold); font-size:32px; cursor:pointer;">▶</button>
-        <button onclick="window.cerrarPlayer()" style="background:none; border:none; color:#444; font-size:24px; margin-left:12px;">×</button>
+        <button onclick="window.togglePlay()" id="p-play-btn" style="background:none; border:none; color:var(--gold); font-size:35px; cursor:pointer;">▶</button>
+        <button onclick="window.cerrarPlayer()" style="background:none; border:none; color:#444; font-size:24px; margin-left:10px;">×</button>
     </div>
     <input type="range" id="seek-bar" value="0" min="0" step="1" style="width:100%;">
     <div class="tool-row">
-        <div class="btn-tool" style="border-color:var(--gold); display:flex; align-items:center; justify-content:center; gap:5px;">
-            <google-cast-launcher style="width:18px; height:18px; --disconnected-color:#d4af37;"></google-cast-launcher>
-            <span style="color:var(--gold);">TV</span>
+        <div class="btn-tool" style="display:flex; align-items:center; justify-content:center; gap:8px;">
+            <google-cast-launcher style="width:20px; height:20px; --disconnected-color:#d4af37;"></google-cast-launcher>
+            <span style="color:var(--gold); font-size:10px;">TV</span>
         </div>
         <button onclick="window.cambiarVelocidad()" id="btn-speed" class="btn-tool">1.0x</button>
         <button onclick="window.toggleMute()" id="btn-mute" class="btn-tool">🔊 VOL</button>
@@ -166,12 +166,12 @@
 
     window.checkLogin = () => {
         const p = document.getElementById('passInput').value.toLowerCase().trim();
-        if(p === "ticoadmin" || p === "ticoadmind" || p === "jazz2026") { 
-            localStorage.setItem('jtp_auth_key', 'true'); 
+        if(p === "ticoadmin" || p === "jazz2026") { 
+            localStorage.setItem('jtp_auth_final_3', 'true'); 
             location.reload(); 
         } else { alert("Clave Incorrecta"); }
     };
-    if(localStorage.getItem('jtp_auth_key')) {
+    if(localStorage.getItem('jtp_auth_final_3')) {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('app-content').style.display = 'block';
         isAdmin = true;
@@ -213,7 +213,7 @@
         document.getElementById('t-playlist').value = p.playlist || "";
         document.getElementById('admin-panel').style.display = 'block';
         document.getElementById('admin-label').innerText = "EDITANDO PROGRAMA";
-        window.scrollTo(0,0);
+        window.scrollTo({top: 0, behavior: 'smooth'});
     };
 
     window.borrarDoc = async (id) => { if(confirm("¿Borrar definitivamente?")) await deleteDoc(doc(db, "radio_programas", id)); };
@@ -240,8 +240,8 @@
                 <div class="episode-info">
                     <span class="program-tag">${p.programa}</span>
                     <h3 class="episode-title">${p.titulo}</h3>
-                    <button class="btn-ver-playlist" onclick="window.togglePlaylist('${p.id}')">📋 VER PLAYLIST</button>
-                    <div id="list-${p.id}" class="playlist-box">${p.playlist || "Próximamente..."}</div>
+                    <button class="btn-ver-playlist" onclick="window.togglePlaylist('${p.id}')">📋 VER PROGRAMACIÓN MUSICAL</button>
+                    <div id="list-${p.id}" class="playlist-box">${p.playlist || "Próximamente compartiremos los detalles musicales de este programa."}</div>
                     ${isAdmin ? `<div class="dj-actions">
                         <button class="btn-dj-edit" onclick="prepararEdicion('${p.id}')">🖋️ EDITAR</button>
                         <button class="btn-dj-del" onclick="borrarDoc('${p.id}')">🗑️ BORRAR</button>
