--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         html, body { margin: 0; background: var(--bg); color: #ffffff; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; overflow-y: auto !important; }
         
-        /* LOGIN */
+        /* 🛡️ LOGIN PREMIUM */
         #login-screen { position: fixed; inset: 0; background: black; z-index: 5000; display: flex; align-items: center; justify-content: center; }
         .login-card { width: 85%; max-width: 320px; text-align: center; background: #111; padding: 40px 30px; border-radius: 25px; border: 1px solid #222; }
         .login-card input { width: 100%; padding: 15px; margin-bottom: 25px; background: #222; border: 1px solid var(--gold); color: white; border-radius: 12px; text-align: center; font-size: 16px; }
-        .btn-gold-tico { width: 100% !important; background: var(--gold) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800 !important; text-transform: uppercase !important; cursor: pointer !important; }
+        .btn-entrar-premium { width: 100% !important; background: var(--gold) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800 !important; text-transform: uppercase !important; cursor: pointer !important; }
 
         header { background: rgba(0,0,0,0.98); padding: 12px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #222; position: sticky; top: 0; z-index: 100; }
         .brand-title { color: var(--gold); font-family: 'Playfair Display', serif; font-size: 11px; text-transform: uppercase; line-height: 1.2; }
-        .btn-salir-premium { background: transparent !important; border: 2px solid var(--gold) !important; color: var(--gold) !important; padding: 7px 15px !important; border-radius: 8px !important; font-size: 10px !important; font-weight: 900 !important; text-transform: uppercase !important; cursor: pointer !important; }
+        .btn-salir-premium { background: transparent !important; border: 2.5px solid var(--gold) !important; color: var(--gold) !important; padding: 7px 15px !important; border-radius: 8px !important; font-size: 10px !important; font-weight: 900 !important; text-transform: uppercase !important; cursor: pointer !important; }
 
         .container { max-width: 450px; margin: auto; padding: 15px; padding-bottom: 300px; }
 
@@ -33,7 +33,7 @@
         .active .channel-logo { border-color: var(--gold); }
         .channel-name { font-size: 6px; color: #ffffff; font-weight: 800; text-transform: uppercase; line-height: 1.1; width: 100%; }
 
-        /* TARJETAS CON MARCO DORADO */
+        /* 🛡️ TARJETAS CON MARCO DE GALA */
         .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; border: 1px solid #1a1a1a; overflow: hidden; transition: 0.3s; }
         .episode-card.is-playing { border-color: var(--gold); }
         .cover-art { width: 100%; height: 180px !important; background-size: cover; background-position: center; position: relative; border: 1.5px solid var(--gold); }
@@ -46,7 +46,7 @@
         .btn-ver-playlist { background: #1a1a1a !important; border: 1.5px solid #333 !important; color: #ffffff !important; padding: 12px !important; border-radius: 12px !important; font-size: 11px !important; font-weight: 800 !important; cursor: pointer !important; width: 100% !important; text-transform: uppercase !important; }
         .playlist-box { display: none; margin-top: 15px; padding: 20px; background: #080808; border-radius: 15px; border: 1px solid #222; font-size: 14px; color: #ffffff; line-height: 1.8; white-space: pre-wrap; }
 
-        /* REPRODUCTOR */
+        /* 🛡️ REPRODUCTOR Y VINILO */
         #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 3px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
         .p-vinyl { width: 55px; height: 55px; border-radius: 50%; border: 2.5px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
         .playing .p-vinyl { animation-play-state: running; }
@@ -66,7 +66,7 @@
         <img src="logo.png" style="width:90px; margin-bottom:20px;">
         <h2 style="color:var(--gold); font-family:'Playfair Display';">JAZZTABUENO</h2>
         <input type="password" id="passInput" placeholder="Clave de Director">
-        <button onclick="window.checkLogin()" class="btn-gold-tico">ENTRAR ▶</button>
+        <button onclick="checkLogin()" class="btn-entrar-premium">ENTRAR ▶</button>
     </div>
 </div>
 
@@ -76,7 +76,7 @@
             <img src="logo.png" width="35" height="35" id="admin-trigger" class="header-logo">
             <div class="brand-title">Jazztabueno<br>Productions</div>
         </div>
-        <button onclick="window.salirTotal()" class="btn-salir-premium">SALIR</button>
+        <button onclick="salirTotal()" class="btn-salir-premium">SALIR</button>
     </header>
 
     <div class="container">
@@ -91,16 +91,16 @@
             </select>
             <input type="text" id="t-url" style="width:100%; padding:14px; background:#000; color:white; border:1px solid #333; border-radius:10px; margin-bottom:10px;" placeholder="URL Audio">
             <input type="text" id="t-img" style="width:100%; padding:14px; background:#000; color:white; border:1px solid #333; border-radius:10px; margin-bottom:10px;" placeholder="URL Portada">
-            <textarea id="t-playlist" style="width:100%; height:120px; background:#000; color:white; border:1px solid var(--gold); border-radius:10px; padding:10px; margin-bottom:15px;" placeholder="Lista..."></textarea>
-            <div style="display:flex; gap:10px;"><button id="btn-save" style="flex:2; background:var(--gold); border:none; padding:15px; border-radius:12px; font-weight:800; cursor:pointer;">💾 GUARDAR</button><button onclick="window.cancelarEdicion()" style="flex:1; background:transparent; border:1px solid #444; color:#888; border-radius:12px; cursor:pointer;">❌</button></div>
+            <textarea id="t-playlist" style="width:100%; height:120px; background:#000; color:white; border:1px solid var(--gold); border-radius:10px; padding:10px; margin-bottom:15px;" placeholder="Playlist..."></textarea>
+            <div style="display:flex; gap:10px;"><button id="btn-save" style="flex:2; background:var(--gold); border:none; padding:15px; border-radius:12px; font-weight:800; cursor:pointer;">💾 GUARDAR</button><button onclick="cancelarEdicion()" style="flex:1; background:transparent; border:1px solid #444; color:#888; border-radius:12px; cursor:pointer;">❌</button></div>
         </div>
 
         <div class="channels-container">
-            <div class="channel-item active" onclick="window.filtrar('Todo', this)"><img src="logo.png" class="channel-logo"><span class="channel-name">Todo</span></div>
-            <div class="channel-item" onclick="window.filtrar('JAZZTABUENO', this)"><img src="https://i.postimg.cc/zVD4mstP/Jazztabueno-(2).png" class="channel-logo"><span class="channel-name">Jazztabueno</span></div>
-            <div class="channel-item" onclick="window.filtrar('STUDIO 79', this)"><img src="https://i.postimg.cc/NKMDbYJB/S79.png" class="channel-logo"><span class="channel-name">Studio 79</span></div>
-            <div class="channel-item" onclick="window.filtrar('SALSA BRAVA', this)"><img src="https://i.postimg.cc/75fchgyt/Salsa-Brava.png" class="channel-logo"><span class="channel-name">Salsa Brava</span></div>
-            <div class="channel-item" onclick="window.filtrar('OLD SCHOOL RADIO', this)"><img src="https://i.postimg.cc/jwQ3mczC/Old-School-Radio.png" class="channel-logo"><span class="channel-name">Old School Radio</span></div>
+            <div class="channel-item active" onclick="filtrar('Todo', this)"><img src="logo.png" class="channel-logo"><span class="channel-name">Todo</span></div>
+            <div class="channel-item" onclick="filtrar('JAZZTABUENO', this)"><img src="https://i.postimg.cc/zVD4mstP/Jazztabueno-(2).png" class="channel-logo"><span class="channel-name">Jazztabueno</span></div>
+            <div class="channel-item" onclick="filtrar('STUDIO 79', this)"><img src="https://i.postimg.cc/NKMDbYJB/S79.png" class="channel-logo"><span class="channel-name">Studio 79</span></div>
+            <div class="channel-item" onclick="filtrar('SALSA BRAVA', this)"><img src="https://i.postimg.cc/75fchgyt/Salsa-Brava.png" class="channel-logo"><span class="channel-name">Salsa Brava</span></div>
+            <div class="channel-item" onclick="filtrar('OLD SCHOOL RADIO', this)"><img src="https://i.postimg.cc/jwQ3mczC/Old-School-Radio.png" class="channel-logo"><span class="channel-name">Old School Radio</span></div>
         </div>
         <div id="radio-feed"></div>
     </div>
@@ -111,14 +111,14 @@
     <div style="display:flex; align-items:center; gap:15px; margin-bottom:15px;">
         <div id="p-vinyl" class="p-vinyl" style="background-image: url('logo.png');"></div>
         <div style="flex:1; overflow:hidden;"><h4 id="p-title" style="margin:0; font-size:15px; color:#ffffff; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; font-weight:800;">...</h4><div id="p-time" style="font-size:12px; color:var(--gold); font-weight:900; margin-top:3px;">00:00 / 00:00</div></div>
-        <button onclick="window.togglePlay()" id="p-play-btn"></button>
-        <button onclick="window.cerrarPlayer()" style="background:none; border:none; color:#666; font-size:28px;">×</button>
+        <button onclick="togglePlay()" id="p-play-btn"></button>
+        <button onclick="cerrarPlayer()" style="background:none; border:none; color:#666; font-size:28px;">×</button>
     </div>
     <input type="range" id="seek-bar" value="0" min="0" step="1" style="width:100%;">
     <div class="player-tools">
         <div class="tool-box"><google-cast-launcher></google-cast-launcher><span style="color:var(--gold);">Google TV</span></div>
-        <button onclick="window.cambiarVelocidad()" id="btn-speed" class="tool-box">1.0x</button>
-        <button onclick="window.toggleMute()" id="btn-mute" class="tool-box">🔊 VOL</button>
+        <button onclick="cambiarVelocidad()" id="btn-speed" class="tool-box">1.0x</button>
+        <button onclick="toggleMute()" id="btn-mute" class="tool-box">🔊 VOL</button>
     </div>
 </div>
 
@@ -134,6 +134,7 @@
     const playSVG = `<svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>`;
     const pauseSVG = `<svg viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>`;
 
+    // 🛡️ LÓGICA GOOGLE TV
     window['__onGCastApiAvailable'] = function(isAvailable) {
         if (isAvailable) {
             const castContext = cast.framework.CastContext.getInstance();
@@ -161,25 +162,30 @@
         }
     };
 
+    // 🛡️ FUNCIONES GLOBALES
     window.checkLogin = () => {
         const p = document.getElementById('passInput').value.toLowerCase().trim();
-        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v87', 'true'); location.reload(); }
+        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v9', 'true'); location.reload(); }
         else { alert("Clave Incorrecta"); }
     };
-    if(localStorage.getItem('jtp_auth_v87')) {
+
+    if(localStorage.getItem('jtp_auth_v9')) {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('app-content').style.display = 'block';
         isAdmin = true;
     }
 
     window.salirTotal = () => { localStorage.clear(); location.reload(); };
-
-    document.getElementById('admin-trigger').onclick = () => {
-        if(isAdmin) document.getElementById('admin-panel').style.display = 'block';
-    };
-
     window.cancelarEdicion = () => { document.getElementById('admin-panel').style.display = 'none'; document.getElementById('edit-id').value = ""; };
+    window.borrarDoc = async (id) => { if(confirm("¿Borrar definitivamente?")) await deleteDoc(doc(db, "radio_programas", id)); };
+    window.togglePlay = () => { if(media.paused) media.play(); else media.pause(); render(); };
+    window.cerrarPlayer = () => { media.pause(); document.getElementById('global-player').style.display='none'; idActual=null; render(); };
+    window.cambiarVelocidad = () => { const s = [1.0, 1.25, 1.5, 2.0]; media.playbackRate = s[(s.indexOf(media.playbackRate)+1)%s.length]; document.getElementById('btn-speed').innerText = media.playbackRate+"x"; };
+    window.toggleMute = () => { media.muted = !media.muted; document.getElementById('btn-mute').innerText = media.muted ? "🔇 MUTE" : "🔊 VOL"; };
+    window.filtrar = (cat, el) => { filtroActivo = cat; document.querySelectorAll('.channel-item').forEach(i => i.classList.remove('active')); el.classList.add('active'); render(); };
+    window.togglePlaylist = (id) => { const el = document.getElementById(`list-${id}`); el.style.display = (el.style.display === 'block') ? 'none' : 'block'; };
 
+    document.getElementById('admin-trigger').onclick = () => { if(isAdmin) document.getElementById('admin-panel').style.display = 'block'; };
     document.getElementById('btn-save').onclick = async () => {
         const id = document.getElementById('edit-id').value;
         const datos = {
@@ -196,17 +202,13 @@
         programas = []; snap.forEach(d => programas.push({id: d.id, ...d.data()})); render();
     });
 
-    window.borrarDoc = async (id) => { if(confirm("¿Borrar?")) await deleteDoc(doc(db, "radio_programas", id)); };
-
     window.prepararEdicion = (id) => {
         const p = programas.find(x => x.id === id);
         document.getElementById('edit-id').value = p.id; document.getElementById('t-titulo').value = p.titulo;
         document.getElementById('t-programa').value = p.programa; document.getElementById('t-url').value = p.mp3Url;
         document.getElementById('t-img').value = p.imagenUrl; document.getElementById('t-playlist').value = p.playlist || "";
-        document.getElementById('admin-panel').style.display = 'block';
+        document.getElementById('admin-panel').style.display = 'block'; window.scrollTo({top: 0, behavior: 'smooth'});
     };
-
-    window.filtrar = (cat, el) => { filtroActivo = cat; document.querySelectorAll('.channel-item').forEach(i => i.classList.remove('active')); el.classList.add('active'); render(); };
 
     function render() {
         const feed = document.getElementById('radio-feed'); if(!feed) return;
@@ -215,6 +217,7 @@
             if (filtroActivo === 'Todo') return true;
             const dbVal = (p.programa || "").toUpperCase();
             const btnVal = filtroActivo.toUpperCase();
+            // 🛡️ REGLA TICO ESTRICTA PARA STUDIO 79
             if (btnVal.includes("STUDIO")) return dbVal.includes("STUDIO");
             return dbVal.includes(btnVal.split(' ')[0]);
         });
@@ -230,8 +233,8 @@
                     <button class="btn-ver-playlist" onclick="window.togglePlaylist('${p.id}')">📋 VER PROGRAMACIÓN</button>
                     <div id="list-${p.id}" class="playlist-box">${p.playlist || "Próximamente."}</div>
                     ${isAdmin ? `<div class="dj-actions" style="display:flex; gap:10px; margin-top:20px; border-top:1px solid #222; padding-top:20px;">
-                        <button class="btn-dj-edit" onclick="window.prepararEdicion('${p.id}')" style="background:transparent; border:1.5px solid var(--gold); color:var(--gold); flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🖋️ EDITAR</button>
-                        <button class="btn-dj-del" onclick="window.borrarDoc('${p.id}')" style="background:transparent; border:1.5px solid #ff4444; color:#ff4444; flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🗑️ BORRAR</button>
+                        <button class="btn-dj-edit" onclick="prepararEdicion('${p.id}')" style="background:transparent; border:1.5px solid var(--gold); color:var(--gold); flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🖋️ EDITAR</button>
+                        <button class="btn-dj-del" onclick="borrarDoc('${p.id}')" style="background:transparent; border:1.5px solid #ff4444; color:#ff4444; flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🗑️ BORRAR</button>
                     </div>` : ''}
                 </div>`;
             feed.appendChild(div);
@@ -244,12 +247,6 @@
         else { idActual = id; currentAudioUrl = url; currentTitle = tit; currentCover = img; media.src = url; media.play(); document.getElementById('p-title').innerText = tit; document.getElementById('p-vinyl').style.backgroundImage = `url('${img}')`; document.getElementById('global-player').style.display = 'block'; }
         render();
     };
-
-    window.togglePlay = () => { if(media.paused) media.play(); else media.pause(); render(); };
-    window.cerrarPlayer = () => { media.pause(); document.getElementById('global-player').style.display='none'; idActual=null; render(); };
-    window.togglePlaylist = (id) => { const el = document.getElementById(`list-${id}`); el.style.display = (el.style.display === 'block') ? 'none' : 'block'; };
-    window.cambiarVelocidad = () => { const s = [1.0, 1.25, 1.5, 2.0]; media.playbackRate = s[(s.indexOf(media.playbackRate)+1)%s.length]; document.getElementById('btn-speed').innerText = media.playbackRate+"x"; };
-    window.toggleMute = () => { media.muted = !media.muted; document.getElementById('btn-mute').innerText = media.muted ? "🔇 MUTE" : "🔊 VOL"; };
 
     function actualizarPlayerStatus() {
         const pBtn = document.getElementById('p-play-btn');
